chore(intl): update translations

--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -75,6 +75,9 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "ZU EINSTELLUNGEN",
   "HIDE_LYRICS": "Hide lyrics",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
+  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Ein mit der Indizierung verbundener Vorgang ist bereits im Gange. Bitte gedulden Sie sich noch etwas.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Warten",
   "INTERNET_ERROR": "Überprüfen Sie Ihre Internetverbindung...",
@@ -118,6 +121,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Playlistenname",
   "PLAYLIST_ADD_DIALOG_BODY": "Wählen Sie eine Playlist aus, um diesen Titel hinzuzufügen",
   "PLAYLIST_ADD_DIALOG_TITLE": "zur Playlist hinzufügen",
+  "PLAYLIST_NAME": "Name",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Hier sind die Songs dieser Playlist",
   "PLAY_INTERNET": "Wiedergabe aus dem Internet",
