--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -75,6 +75,9 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "رفتن به تنظیمات",
   "HIDE_LYRICS": "Hide lyrics",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
+  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "وضعیت اتصال خود را بررسی کنید.",
@@ -118,6 +121,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "نام لیست پخش",
   "PLAYLIST_ADD_DIALOG_BODY": "لیست پخشی را انتخاب کنید تا موزیک شما در آن اضافه شود",
   "PLAYLIST_ADD_DIALOG_TITLE": "اضافه کردن به لیست پخش",
+  "PLAYLIST_NAME": "Name",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "اینجا موسیقی‌های لیست پخش را مشاهده می‌کنید.",
   "PLAY_INTERNET": "Play from internet",
