--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -75,6 +75,9 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "Se rendre dans les paramètres",
   "HIDE_LYRICS": "Hide lyrics",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
+  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Une opération d'indexation est déjà en cours. Veuillez patienter.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Patienter",
   "INTERNET_ERROR": "Aucune connexion Internet",
@@ -118,6 +121,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Nom de la playlist",
   "PLAYLIST_ADD_DIALOG_BODY": "Sélectionner une playlist pour y ajouter la piste",
   "PLAYLIST_ADD_DIALOG_TITLE": "Ajouter à la playlist",
+  "PLAYLIST_NAME": "Name",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Pistes dans la playlist",
   "PLAY_INTERNET": "Lire depuis Internet",
