--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -75,6 +75,9 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "KE PENGATURAN",
   "HIDE_LYRICS": "Hide lyrics",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
+  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Sedang menjalankan operasi yang berhubungan dengan pendaftaran. Mohon tunggu.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Tunggu",
   "INTERNET_ERROR": "Cek koneksi internet anda.",
@@ -118,6 +121,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Nama daftar putar",
   "PLAYLIST_ADD_DIALOG_BODY": "Pilih daftar putar yang ingin ditambahkan trek ini",
   "PLAYLIST_ADD_DIALOG_TITLE": "Tambahkan ke daftar putar",
+  "PLAYLIST_NAME": "Name",
   "PLAYLIST_SINGLE": "Daftar putar",
   "PLAYLIST_TRACKS_SUBHEADER": "Ini adalah trek di dalam daftar putar",
   "PLAY_INTERNET": "Mainkan dari internet",
