--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -75,6 +75,9 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "設定に移動する",
   "HIDE_LYRICS": "Hide lyrics",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
+  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "すでにインデックス関連の動作が行われています。しばらくお待ちください。",
   "INDEXING_ALREADY_GOING_ON_TITLE": "お待ちください",
   "INTERNET_ERROR": "インターネット接続を確認してください。",
@@ -118,6 +121,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "プレイリスト名",
   "PLAYLIST_ADD_DIALOG_BODY": "このトラックを追加するプレイリストを選択してください",
   "PLAYLIST_ADD_DIALOG_TITLE": "プレイリストに追加",
+  "PLAYLIST_NAME": "Name",
   "PLAYLIST_SINGLE": "プレイリスト",
   "PLAYLIST_TRACKS_SUBHEADER": "このプレイリストには以下のトラックがあります",
   "PLAY_INTERNET": "インターネットから再生",
