--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -75,6 +75,9 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
   "HIDE_LYRICS": "Ocultar letras",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
+  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Uma operação relacionada à indexação já está em andamento. Por favor, aguarde.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Aguarde",
   "INTERNET_ERROR": "Verifique sua conexão com a internet...",
@@ -118,6 +121,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Nome da Playlist",
   "PLAYLIST_ADD_DIALOG_BODY": "Selecione uma lista de reprodução para adicionar essa música",
   "PLAYLIST_ADD_DIALOG_TITLE": "Adicionar à Playlist",
+  "PLAYLIST_NAME": "Name",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Aqui estão algumas músicas nessa lista de reprodução",
   "PLAY_INTERNET": "Reproduzir da internet",
