--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -75,6 +75,9 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "В НАСТРОЙКИ",
   "HIDE_LYRICS": "Hide lyrics",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
+  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "В данный момент выполняется индексация. Пожалуйста, подождите.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Подождите",
   "INTERNET_ERROR": "Проверьте интернет-соединение.",
@@ -118,6 +121,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Название",
   "PLAYLIST_ADD_DIALOG_BODY": "Выберите плейлист",
   "PLAYLIST_ADD_DIALOG_TITLE": "Добавить в плейлист",
+  "PLAYLIST_NAME": "Name",
   "PLAYLIST_SINGLE": "Плейлист",
   "PLAYLIST_TRACKS_SUBHEADER": "Треки в плейлисте",
   "PLAY_INTERNET": "Play from internet",
