--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -75,6 +75,9 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "AYARLARA GİT",
   "HIDE_LYRICS": "Hide lyrics",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
+  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "İnternet bağlantını kontrol et",
@@ -118,6 +121,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Oynatma listesi adı",
   "PLAYLIST_ADD_DIALOG_BODY": "Bu müziği eklemek için herhangi bir oynatma listesi seç",
   "PLAYLIST_ADD_DIALOG_TITLE": "Oynatma listesine ekle",
+  "PLAYLIST_NAME": "Name",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Listedeki müzikler",
   "PLAY_INTERNET": "Play from internet",
