--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -75,6 +75,9 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "前往设置",
   "HIDE_LYRICS": "Hide lyrics",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
+  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "与索引相关的操作已经在进行。请稍候。",
   "INDEXING_ALREADY_GOING_ON_TITLE": "等待",
   "INTERNET_ERROR": "检查您的网络连接。",
@@ -118,6 +121,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "播放列表名",
   "PLAYLIST_ADD_DIALOG_BODY": "选择播放列表添加歌曲",
   "PLAYLIST_ADD_DIALOG_TITLE": "添加到播放列表",
+  "PLAYLIST_NAME": "Name",
   "PLAYLIST_SINGLE": "播放列表",
   "PLAYLIST_TRACKS_SUBHEADER": "这里展示的是播放列表中的歌曲",
   "PLAY_INTERNET": "从网络播放",
