--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -75,6 +75,9 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "Tənzimləmələrə get",
   "HIDE_LYRICS": "Hide lyrics",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
+  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "İnternet bağlantısını yoxla",
@@ -118,6 +121,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Oynatma sırası adı",
   "PLAYLIST_ADD_DIALOG_BODY": "Bu musiqini əlavə etmək üçün hər hansı bir oynatma sırasını seç",
   "PLAYLIST_ADD_DIALOG_TITLE": "Oynatma sırasına əlavə et",
+  "PLAYLIST_NAME": "Name",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Sıradakı musiqilər",
   "PLAY_INTERNET": "Play from internet",
