--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -75,6 +75,9 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
   "HIDE_LYRICS": "Hide lyrics",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
+  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "अपना इंटरनेट कनेक्शन चेक करें।",
@@ -118,6 +121,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "नाम",
   "PLAYLIST_ADD_DIALOG_BODY": "प्लेलिस्ट चुनें",
   "PLAYLIST_ADD_DIALOG_TITLE": "प्लेलिस्ट में जोड़े",
+  "PLAYLIST_NAME": "Name",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "इस प्लेलिस्ट के गाने",
   "PLAY_INTERNET": "Play from internet",
