--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -75,6 +75,9 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
   "HIDE_LYRICS": "Hide lyrics",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
+  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "Hamarino ny fifandraisana Internet anao.",
@@ -118,6 +121,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Anaran'ilay filaharan-kira",
   "PLAYLIST_ADD_DIALOG_BODY": "Misafidiana filaharan-kira ampidirana ity mozika ity",
   "PLAYLIST_ADD_DIALOG_TITLE": "Ampio amin'ny filaharan-kira",
+  "PLAYLIST_NAME": "Name",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Ireto ny hira avy amin'ity filaharan-kira ity",
   "PLAY_INTERNET": "Play from internet",
