--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -75,6 +75,9 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
   "HIDE_LYRICS": "Hide lyrics",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
+  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "Controleer uw internet verbinding...",
@@ -118,6 +121,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Naam afspeellijst",
   "PLAYLIST_ADD_DIALOG_BODY": "Selecteer een afspeellijst en voeg dit nummer toe",
   "PLAYLIST_ADD_DIALOG_TITLE": "Toevoegen aan afspeellijst",
+  "PLAYLIST_NAME": "Name",
   "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Hier zijn de nummers in deze afspeellijst",
   "PLAY_INTERNET": "Play from internet",
