--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -75,6 +75,9 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "POJDI V NASTAVITVE",
   "HIDE_LYRICS": "Hide lyrics",
+  "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
+  "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
+  "IMPORT_PLAYLIST_TITLE": "Import Playlist",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Operacija indeksiranja že poteka. Prosimo, počakajte.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Počakajte",
   "INTERNET_ERROR": "Prosimo, preverite vašo internetno povezavo",
@@ -118,6 +121,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Ime seznama predvajanja",
   "PLAYLIST_ADD_DIALOG_BODY": "Izberi pesem za seznam predvajanja",
   "PLAYLIST_ADD_DIALOG_TITLE": "Dodaj na seznam predvajanja",
+  "PLAYLIST_NAME": "Name",
   "PLAYLIST_SINGLE": "Seznam predvajanja",
   "PLAYLIST_TRACKS_SUBHEADER": "Tukaj so pesmi iz seznama predvajanja",
   "PLAY_INTERNET": "Play from internet",
