chore(intl): update translations

--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -61,10 +61,12 @@
   "DISCORD": "DISCORD SERVER",
   "DISCOVERING_FILES": "Finden von Dateien...",
   "DONATE": "Spenden",
+  "DONE": "Done",
   "DOWNLOAD_UPDATE": "UPDATE DOWNLOADEN",
   "EDIT_DETAILS": "Einzelheiten bearbeiten",
   "ENABLE_125_SCALING": "125% Skalierung aktivieren.",
   "ENABLE_ACRYLIC_BLUR": "Windows-Acryl-Blur-Effekt aktivieren",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "\"Läuft gerade\" beenden",
   "EXIT_SUBTITLE": "Möchten Sie Harmonoid beenden?",
@@ -81,6 +83,7 @@
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Ein mit der Indizierung verbundener Vorgang ist bereits im Gange. Bitte gedulden Sie sich noch etwas.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Warten",
   "INTERNET_ERROR": "Überprüfen Sie Ihre Internetverbindung...",
+  "INVALID_PLAYLIST_URL": "An invalid playlist URL was provided.",
   "KNOW_MORE": "MEHR ERFAHREN",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Mindestens ein Ordner muss in Ihrer Sammlung verbleiben.",
   "LESS": "weniger",
