--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -61,10 +61,12 @@
   "DISCORD": "سرور دیسکورد",
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
+  "DONE": "Done",
   "DOWNLOAD_UPDATE": "دانلود آخرین بروزرسانی",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "فعال کردن مقیاس 125 درصدی",
   "ENABLE_ACRYLIC_BLUR": "فعال کردن بلور ویندوز",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "خروج از پخش آهنگ",
   "EXIT_SUBTITLE": "آیا میخواهید از هارمونوید خارج شوید؟",
@@ -81,6 +83,7 @@
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "وضعیت اتصال خود را بررسی کنید.",
+  "INVALID_PLAYLIST_URL": "An invalid playlist URL was provided.",
   "KNOW_MORE": "بیشتر بدانید...",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "حداقل یک پوشه باید در کالکشن شما باشد.",
   "LESS": "Less",
