--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -61,10 +61,12 @@
   "DISCORD": "Discordサーバー",
   "DISCOVERING_FILES": "ファイルを探しています...",
   "DONATE": "寄付",
+  "DONE": "Done",
   "DOWNLOAD_UPDATE": "アップデート",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "125% スケーリングを有効化",
   "ENABLE_ACRYLIC_BLUR": "Windows acrylic blurを有効化",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "再生中を閉じる",
   "EXIT_SUBTITLE": "Harmonoidを終了しますか？",
@@ -81,6 +83,7 @@
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "すでにインデックス関連の動作が行われています。しばらくお待ちください。",
   "INDEXING_ALREADY_GOING_ON_TITLE": "お待ちください",
   "INTERNET_ERROR": "インターネット接続を確認してください。",
+  "INVALID_PLAYLIST_URL": "An invalid playlist URL was provided.",
   "KNOW_MORE": "もっと知る",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "コレクションには1つ以上のフォルダを残しておく必要があります。",
   "LESS": "減らす",
