--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -61,10 +61,12 @@
   "DISCORD": "DISCORD SERVEUR",
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
+  "DONE": "Done",
   "DOWNLOAD_UPDATE": "SINTOMY NY FANAVAOZANA VAOVAO",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Ampandehano ny tohatra manisa 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ampandehano ny 'Windows acrylic blur'.",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Te hiala amin'ny Harmonoid ve ianao?",
@@ -81,6 +83,7 @@
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "Hamarino ny fifandraisana Internet anao.",
+  "INVALID_PLAYLIST_URL": "An invalid playlist URL was provided.",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Farafahakeliny rakitra iray tsy maintsy mijanona ao amin'ny fanangonana.",
   "LESS": "Less",
