--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -61,10 +61,12 @@
   "DISCORD": "SERVIDOR DO DISCORD",
   "DISCOVERING_FILES": "Descobrindo arquivos...",
   "DONATE": "Doar",
+  "DONE": "Done",
   "DOWNLOAD_UPDATE": "BAIXAR ATUALIZAÇÃO",
   "EDIT_DETAILS": "Editar detalhes",
   "ENABLE_125_SCALING": "Ativar escala de 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ativar desfoque acrílico do Windows.",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Sair da tela cheia",
   "EXIT_NOW_PLAYING": "Sair agora da reprodução",
   "EXIT_SUBTITLE": "Você quer nos deixar?",
@@ -81,6 +83,7 @@
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Uma operação relacionada à indexação já está em andamento. Por favor, aguarde.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Aguarde",
   "INTERNET_ERROR": "Verifique sua conexão com a internet...",
+  "INVALID_PLAYLIST_URL": "An invalid playlist URL was provided.",
   "KNOW_MORE": "SABER MAIS",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Pelo menos uma pasta precisa permanecer em sua coleção.",
   "LESS": "Menos",
