--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -61,10 +61,12 @@
   "DISCORD": "DISCORD",
   "DISCOVERING_FILES": "Поиск файлов...",
   "DONATE": "Donate",
+  "DONE": "Done",
   "DOWNLOAD_UPDATE": "СКАЧАТЬ ОБНОВЛЕНИЕ",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Включить масштаб 125%.",
   "ENABLE_ACRYLIC_BLUR": "Включить «акриловое размытие» (Windows).",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Закрыть очередь",
   "EXIT_SUBTITLE": "Хотите выйти?",
@@ -81,6 +83,7 @@
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "В данный момент выполняется индексация. Пожалуйста, подождите.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Подождите",
   "INTERNET_ERROR": "Проверьте интернет-соединение.",
+  "INVALID_PLAYLIST_URL": "An invalid playlist URL was provided.",
   "KNOW_MORE": "УЗНАТЬ БОЛЬШЕ",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Оставьте хотя бы одну папку.",
   "LESS": "Less",
