--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -61,10 +61,12 @@
   "DISCORD": "DISCORD 服务器",
   "DISCOVERING_FILES": "正在发现文件...",
   "DONATE": "捐赠",
+  "DONE": "Done",
   "DOWNLOAD_UPDATE": "下载更新",
   "EDIT_DETAILS": "编辑详细信息",
   "ENABLE_125_SCALING": "开启 125% 缩放。",
   "ENABLE_ACRYLIC_BLUR": "开启 Windows 歌词模糊。",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "退出正在播放",
   "EXIT_SUBTITLE": "您确定退出 Harmonoid 吗?",
@@ -81,6 +83,7 @@
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "与索引相关的操作已经在进行。请稍候。",
   "INDEXING_ALREADY_GOING_ON_TITLE": "等待",
   "INTERNET_ERROR": "检查您的网络连接。",
+  "INVALID_PLAYLIST_URL": "An invalid playlist URL was provided.",
   "KNOW_MORE": "了解更多",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "您的收藏中需要只是包括一个目录。",
   "LESS": "较少",
