--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -61,10 +61,12 @@
   "DISCORD": "DISCORD SUNUCUSU",
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
+  "DONE": "Done",
   "DOWNLOAD_UPDATE": "GÜNCƏLLƏ",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "125% ölçəkləməni aktivləşdir",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylic Blur'u aktivləşdir",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Çıx, hazırda oynatılır",
   "EXIT_SUBTITLE": "Harmonoid'dən çıxmaq istədiyinə əminsənmi?",
@@ -81,6 +83,7 @@
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "İnternet bağlantısını yoxla",
+  "INVALID_PLAYLIST_URL": "An invalid playlist URL was provided.",
   "KNOW_MORE": "Daha çox bilgi",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Kolleksiyanda ən az bir qovluq qalmalıdır.",
   "LESS": "Less",
