--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -61,10 +61,12 @@
   "DISCORD": "DISCORD SERVER",
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
+  "DONE": "Done",
   "DOWNLOAD_UPDATE": "UPDATE",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
   "ENABLE_ACRYLIC_BLUR": "Enable Windows acrylic blur.",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Do you want to exit Harmonoid?",
@@ -81,6 +83,7 @@
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "Check your internet connection.",
+  "INVALID_PLAYLIST_URL": "An invalid playlist URL was provided.",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
   "LESS": "Less",
