--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -61,10 +61,12 @@
   "DISCORD": "Serveur Discord",
   "DISCOVERING_FILES": "Découverte des fichiers...",
   "DONATE": "Faire un don",
+  "DONE": "Done",
   "DOWNLOAD_UPDATE": "Télécharger la mise à jour",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Activer la mise à l'échelle à 125%",
   "ENABLE_ACRYLIC_BLUR": "Activer le flou acrylique Windows",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Quitter \"En cours de lecture\"",
   "EXIT_SUBTITLE": "Voulez-vous quitter Harmonoid ?",
@@ -81,6 +83,7 @@
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Une opération d'indexation est déjà en cours. Veuillez patienter.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Patienter",
   "INTERNET_ERROR": "Aucune connexion Internet",
+  "INVALID_PLAYLIST_URL": "An invalid playlist URL was provided.",
   "KNOW_MORE": "En savoir plus",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Un répertoire au moins doit être présent dans votre collection.",
   "LESS": "Moins",
