--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -61,10 +61,12 @@
   "DISCORD": "SERVER DISCORD",
   "DISCOVERING_FILES": "Temukan File...",
   "DONATE": "Donasi",
+  "DONE": "Done",
   "DOWNLOAD_UPDATE": "PERBARUI",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Aktifkan skala 125% .",
   "ENABLE_ACRYLIC_BLUR": "Aktifkan blur akrilik Windows.",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Tutup yang sedang dimainkan",
   "EXIT_SUBTITLE": "Apakah anda ingin menutup Harmonoid?",
@@ -81,6 +83,7 @@
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Sedang menjalankan operasi yang berhubungan dengan pendaftaran. Mohon tunggu.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Tunggu",
   "INTERNET_ERROR": "Cek koneksi internet anda.",
+  "INVALID_PLAYLIST_URL": "An invalid playlist URL was provided.",
   "KNOW_MORE": "CARI TAHU LEBIH BANYAK",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Setidaknya satu folder harus tetap di koleksi.",
   "LESS": "Lebih sedikit",
