--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -61,10 +61,12 @@
   "DISCORD": "DISCORD STREŽNIK",
   "DISCOVERING_FILES": "Odkrivam datoteke...",
   "DONATE": "Donate",
+  "DONE": "Done",
   "DOWNLOAD_UPDATE": "PRENESI POSODOBITEV",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Vključi 125% povečavo.",
   "ENABLE_ACRYLIC_BLUR": "Vključi Windows Acrylic blur.",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Zapri trenutno predvajano",
   "EXIT_SUBTITLE": "Ali res hočeš zapreti aplikacijo?",
@@ -81,6 +83,7 @@
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Operacija indeksiranja že poteka. Prosimo, počakajte.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Počakajte",
   "INTERNET_ERROR": "Prosimo, preverite vašo internetno povezavo",
+  "INVALID_PLAYLIST_URL": "An invalid playlist URL was provided.",
   "KNOW_MORE": "POGLEJ VEČ",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Vsaj en direktorij mora ostati v tvoji zbirki.",
   "LESS": "Manj",
