--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -61,10 +61,12 @@
   "DISCORD": "DISCORD SUNUCUSU",
   "DISCOVERING_FILES": "Discovering files...",
   "DONATE": "Donate",
+  "DONE": "Done",
   "DOWNLOAD_UPDATE": "GÜNCELLE",
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "125% ölçeklemeyi etkinleştir",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylic Blur'u etkinleştir",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Harmonoid'den çıkmak istediğine emin misin?",
@@ -81,6 +83,7 @@
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operation is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "İnternet bağlantını kontrol et",
+  "INVALID_PLAYLIST_URL": "An invalid playlist URL was provided.",
   "KNOW_MORE": "Daha fazla bilgi",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Koleksiyonunda en az bir klasör kalmalıdır.",
   "LESS": "Less",
