--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -65,6 +65,7 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "125% ölçəkləməni aktivləşdir",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylic Blur'u aktivləşdir",
+  "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Çıx, hazırda oynatılır",
   "EXIT_SUBTITLE": "Harmonoid'dən çıxmaq istədiyinə əminsənmi?",
