--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -65,6 +65,7 @@
   "EDIT_DETAILS": "Einzelheiten bearbeiten",
   "ENABLE_125_SCALING": "125% Skalierung aktivieren.",
   "ENABLE_ACRYLIC_BLUR": "Windows-Acryl-Blur-Effekt aktivieren",
+  "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "\"Läuft gerade\" beenden",
   "EXIT_SUBTITLE": "Möchten Sie Harmonoid beenden?",
