--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -65,6 +65,7 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "فعال کردن مقیاس 125 درصدی",
   "ENABLE_ACRYLIC_BLUR": "فعال کردن بلور ویندوز",
+  "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "خروج از پخش آهنگ",
   "EXIT_SUBTITLE": "آیا میخواهید از هارمونوید خارج شوید؟",
