--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -65,6 +65,7 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Activer la mise à l'échelle à 125%",
   "ENABLE_ACRYLIC_BLUR": "Activer le flou acrylique Windows",
+  "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Quitter \"En cours de lecture\"",
   "EXIT_SUBTITLE": "Voulez-vous quitter Harmonoid ?",
