--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -65,6 +65,7 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Aktifkan skala 125% .",
   "ENABLE_ACRYLIC_BLUR": "Aktifkan blur akrilik Windows.",
+  "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Tutup yang sedang dimainkan",
   "EXIT_SUBTITLE": "Apakah anda ingin menutup Harmonoid?",
