--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -65,6 +65,7 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Ampandehano ny tohatra manisa 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ampandehano ny 'Windows acrylic blur'.",
+  "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Te hiala amin'ny Harmonoid ve ianao?",
