--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -65,6 +65,7 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Vergroting (125%) inschakelen",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylvervaging inschakelen",
+  "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Wilt u Harmonoid afsluiten?",
