--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -65,6 +65,7 @@
   "EDIT_DETAILS": "Editar detalhes",
   "ENABLE_125_SCALING": "Ativar escala de 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ativar desfoque acrílico do Windows.",
+  "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
   "EXIT_FULLSCREEN": "Sair da tela cheia",
   "EXIT_NOW_PLAYING": "Sair agora da reprodução",
   "EXIT_SUBTITLE": "Você quer nos deixar?",
