--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -65,6 +65,7 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Vključi 125% povečavo.",
   "ENABLE_ACRYLIC_BLUR": "Vključi Windows Acrylic blur.",
+  "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Zapri trenutno predvajano",
   "EXIT_SUBTITLE": "Ali res hočeš zapreti aplikacijo?",
