--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -65,6 +65,7 @@
   "EDIT_DETAILS": "编辑详细信息",
   "ENABLE_125_SCALING": "开启 125% 缩放。",
   "ENABLE_ACRYLIC_BLUR": "开启 Windows 歌词模糊。",
+  "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "退出正在播放",
   "EXIT_SUBTITLE": "您确定退出 Harmonoid 吗?",
