chore(intl): add new translations

--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -17,6 +17,7 @@
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Ative a reprodução contínua",
   "AUTO_REFRESH_SETTING": "Verifique automaticamente se há novos arquivos ao iniciar de novo",
   "AUTO_REFRESH_SETTING_TITLE": "Pesquisa automática de música ao iniciar",
+  "Awesome!": "Awesome!",
   "A_TO_Z": "A à Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Mostrar arte mínima por trás do conteúdo na tela",
   "BACKGROUND_ARTWORK_TITLE": "Ativar arte de fundo",
@@ -66,14 +67,16 @@
   "EDIT_DETAILS": "Editar detalhes",
   "ENABLE_125_SCALING": "Ativar escala de 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ativar desfoque acrílico do Windows.",
-  "ERROR": "Error",
   "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Sair da tela cheia",
   "EXIT_NOW_PLAYING": "Sair agora da reprodução",
   "EXIT_SUBTITLE": "Você quer nos deixar?",
   "EXIT_TITLE": "Sair",
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "Essas configurações ainda não estão marcadas como estáveis",
+  "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
+  "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Entrar em tela cheia",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
@@ -105,6 +108,7 @@
   "NOW_PLAYING_NEXT_TRACK": "PRÓXIMO",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Nada tocando...",
   "NOW_PLAYING_PREVIOUS_TRACK": "ANTERIOR",
+  "NOW_YOU_ARE_GOOD_TO_GO_BACK": "Now you're good to go back.",
   "NO_COLLECTION_SUBTITLE": "Nenhuma música encontrada.",
   "NO_COLLECTION_TITLE": "Coleção vazia",
   "NO_DOWNLOAD_UPDATE": "Seu aplicativo já está atualizado",
