--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -17,6 +17,7 @@
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Nahtlose Wiedergabe aktivieren",
   "AUTO_REFRESH_SETTING": "Automatisches Überprüfen nach neuen Dateien bei jedem Neustart",
   "AUTO_REFRESH_SETTING_TITLE": "Automatische Suche nach Musik beim Programmstart",
+  "Awesome!": "Awesome!",
   "A_TO_Z": "A bis Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Minimale Grafiken im Hintergrund des Bildschirminhalts anzeigen",
   "BACKGROUND_ARTWORK_TITLE": "Hintergrundgrafiken aktivieren",
@@ -66,14 +67,16 @@
   "EDIT_DETAILS": "Einzelheiten bearbeiten",
   "ENABLE_125_SCALING": "125% Skalierung aktivieren.",
   "ENABLE_ACRYLIC_BLUR": "Windows-Acryl-Blur-Effekt aktivieren",
-  "ERROR": "Error",
   "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "\"Läuft gerade\" beenden",
   "EXIT_SUBTITLE": "Möchten Sie Harmonoid beenden?",
   "EXIT_TITLE": "beenden",
   "EXPERIMENTAL": "Experimentell",
   "EXPERIMENTAL_SUBTITLE": "Diese Einstellungen sind noch nicht als konstant(stable) markiert",
+  "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
+  "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "ZU EINSTELLUNGEN",
@@ -105,6 +108,7 @@
   "NOW_PLAYING_NEXT_TRACK": "NÄCHSTER",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Es wird aktuell nichts gespielt...",
   "NOW_PLAYING_PREVIOUS_TRACK": "VORHERIGER",
+  "NOW_YOU_ARE_GOOD_TO_GO_BACK": "Now you're good to go back.",
   "NO_COLLECTION_SUBTITLE": "Keine Musik gefunden.",
   "NO_COLLECTION_TITLE": "Leere Sammlung",
   "NO_DOWNLOAD_UPDATE": "Ihre App ist bereits aktuell.",
