--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -17,6 +17,7 @@
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
   "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
   "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
+  "Awesome!": "Awesome!",
   "A_TO_Z": "A till Ö",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
@@ -66,14 +67,16 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "Aktivera 125% uppskalning.",
   "ENABLE_ACRYLIC_BLUR": "Aktivera Windows akryl suddighet.",
-  "ERROR": "Error",
   "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Vill du avsluta Harmonoid?",
   "EXIT_TITLE": "Avsluta",
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
+  "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
+  "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "GÅ TILL INSTÄLLNINGAR",
@@ -105,6 +108,7 @@
   "NOW_PLAYING_NEXT_TRACK": "NEXT",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Nothing is being played",
   "NOW_PLAYING_PREVIOUS_TRACK": "PREVIOUS",
+  "NOW_YOU_ARE_GOOD_TO_GO_BACK": "Now you're good to go back.",
   "NO_COLLECTION_SUBTITLE": "No music found.\nChange where to look for the music from settings.",
   "NO_COLLECTION_TITLE": "Empty Collection",
   "NO_DOWNLOAD_UPDATE": "Your app is already updated",
