--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -17,6 +17,7 @@
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
   "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
   "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
+  "Awesome!": "Awesome!",
   "A_TO_Z": "A'dan Z'ye",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
@@ -66,14 +67,16 @@
   "EDIT_DETAILS": "Edit details",
   "ENABLE_125_SCALING": "125% ölçeklemeyi etkinleştir",
   "ENABLE_ACRYLIC_BLUR": "Windows Acrylic Blur'u etkinleştir",
-  "ERROR": "Error",
   "ENABLE_DISCORD_RPC": "Enable Discord RPC integration",
+  "ERROR": "Error",
   "EXIT_FULLSCREEN": "Exit fullscreen",
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Harmonoid'den çıkmak istediğine emin misin?",
   "EXIT_TITLE": "Çık",
   "EXPERIMENTAL": "Experimental",
   "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet",
+  "FOLDERS_NOT_FOUND": "Few of the folders from your collection could not be located.\nPlease ensure the presence & re-start the app, or remove these folders before proceeding:",
+  "FOLDER_NOT_FOUND": "This folder could not be located",
   "FULLSCREEN": "Enter fullscreen",
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "AYARLARA GİT",
@@ -105,6 +108,7 @@
   "NOW_PLAYING_NEXT_TRACK": "SONRAKİ",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Hiçbir şey oynatılmıyor",
   "NOW_PLAYING_PREVIOUS_TRACK": "ÖNCEKİ",
+  "NOW_YOU_ARE_GOOD_TO_GO_BACK": "Now you're good to go back.",
   "NO_COLLECTION_SUBTITLE": "Müzik bulunamadı.\nMüziklerinin bulunması gereken klasörü ayarlardan değiştir.",
   "NO_COLLECTION_TITLE": "Boş koleksiyon",
   "NO_DOWNLOAD_UPDATE": "Uygulama güncel",
