chore(intl): fix updated translations

--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -17,7 +17,7 @@
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Nahtlose Wiedergabe aktivieren",
   "AUTO_REFRESH_SETTING": "Automatisches Überprüfen nach neuen Dateien bei jedem Neustart",
   "AUTO_REFRESH_SETTING_TITLE": "Automatische Suche nach Musik beim Programmstart",
-  "Awesome!": "Awesome!",
+  "AWESOME": "Awesome!",
   "A_TO_Z": "A bis Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Minimale Grafiken im Hintergrund des Bildschirminhalts anzeigen",
   "BACKGROUND_ARTWORK_TITLE": "Hintergrundgrafiken aktivieren",
