--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -17,7 +17,7 @@
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Activer la lecture transparente",
   "AUTO_REFRESH_SETTING": "Rechercher automatiquement de nouveaux fichiers au démarrage",
   "AUTO_REFRESH_SETTING_TITLE": "Recherche automatique de musique au démarrage",
-  "Awesome!": "Awesome!",
+  "AWESOME": "Awesome!",
   "A_TO_Z": "A à Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
