--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -17,7 +17,7 @@
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Aktifkan daftar putar mulus",
   "AUTO_REFRESH_SETTING": "Cek file baru pada saat memulai aplikasi",
   "AUTO_REFRESH_SETTING_TITLE": "Mencari musik otomastis pada saat memulai aplikasi",
-  "Awesome!": "Awesome!",
+  "AWESOME": "Awesome!",
   "A_TO_Z": "A ke Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
