--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -17,7 +17,7 @@
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "シームレスな再生を有効にする",
   "AUTO_REFRESH_SETTING": "起動した際に新しいファイルをチェックする",
   "AUTO_REFRESH_SETTING_TITLE": "起動時に自動的に音楽を探す",
-  "Awesome!": "Awesome!",
+  "AWESOME": "Awesome!",
   "A_TO_Z": "A から Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
