--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -17,7 +17,7 @@
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Ative a reprodução contínua",
   "AUTO_REFRESH_SETTING": "Verifique automaticamente se há novos arquivos ao iniciar de novo",
   "AUTO_REFRESH_SETTING_TITLE": "Pesquisa automática de música ao iniciar",
-  "Awesome!": "Awesome!",
+  "AWESOME": "Awesome!",
   "A_TO_Z": "A à Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Mostrar arte mínima por trás do conteúdo na tela",
   "BACKGROUND_ARTWORK_TITLE": "Ativar arte de fundo",
