--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -17,7 +17,7 @@
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
   "AUTO_REFRESH_SETTING": "Avtomatično preveri za nove datoteke na zagonu",
   "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
-  "Awesome!": "Awesome!",
+  "AWESOME": "Awesome!",
   "A_TO_Z": "Od A do Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
