--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -17,7 +17,7 @@
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "启用无缝播放",
   "AUTO_REFRESH_SETTING": "重新启动时自动检查新文件",
   "AUTO_REFRESH_SETTING_TITLE": "启动时自动查找音乐",
-  "Awesome!": "Awesome!",
+  "AWESOME": "Awesome!",
   "A_TO_Z": "A 到 Z",
   "BACKGROUND_ARTWORK_SUBTITLE": "在屏幕上的内容后面显示最少的艺术作品",
   "BACKGROUND_ARTWORK_TITLE": "启用背景艺术作品",
