--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -17,7 +17,7 @@
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING_TITLE": "Enable seamless playback",
   "AUTO_REFRESH_SETTING": "Проверять наличие новых файлов при каждом запуске",
   "AUTO_REFRESH_SETTING_TITLE": "Automatic music lookup on start",
-  "Awesome!": "Awesome!",
+  "AWESOME": "Awesome!",
   "A_TO_Z": "По алфавиту",
   "BACKGROUND_ARTWORK_SUBTITLE": "Show minimal artwork behind content on the screen",
   "BACKGROUND_ARTWORK_TITLE": "Enable background artwork",
