chore(intl): update translations

--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -81,6 +81,7 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
   "HIDE_LYRICS": "Hide lyrics",
+  "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
   "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
@@ -108,6 +109,8 @@
   "NOW_PLAYING_NEXT_TRACK": "NEXT",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Nothing is being played",
   "NOW_PLAYING_PREVIOUS_TRACK": "PREVIOUS",
+  "NOW_PLAYING_SCREEN": "Now Playing Screen",
+  "NOW_PLAYING_SCREEN_SETTING_SUBTITLE": "Settings related to the \"Now Playing Screen\"",
   "NOW_YOU_ARE_GOOD_TO_GO_BACK": "Now you're good to go back.",
   "NO_COLLECTION_SUBTITLE": "No music found.\nChange where to look for the music from settings.",
   "NO_COLLECTION_TITLE": "Empty Collection",
@@ -153,6 +156,7 @@
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESTORE": "Restore",
+  "RESTORE_DEFAULTS": "Restore Defaults",
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "Retrieving info",
   "RETRIEVING_LINK": "Retrieving stream",
@@ -221,6 +225,7 @@
   "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Track",
   "TRANSFERS": "Transfers",
+  "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "Unmute",
   "UPDATE_AVAILABLE": "Update available: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
