--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -81,6 +81,7 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "設定に移動する",
   "HIDE_LYRICS": "Hide lyrics",
+  "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
   "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
@@ -108,6 +109,8 @@
   "NOW_PLAYING_NEXT_TRACK": "次の曲",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "再生されていません",
   "NOW_PLAYING_PREVIOUS_TRACK": "前の曲",
+  "NOW_PLAYING_SCREEN": "Now Playing Screen",
+  "NOW_PLAYING_SCREEN_SETTING_SUBTITLE": "Settings related to the \"Now Playing Screen\"",
   "NOW_YOU_ARE_GOOD_TO_GO_BACK": "Now you're good to go back.",
   "NO_COLLECTION_SUBTITLE": "見つかりませんでした。\n設定から参照先を変更してください。",
   "NO_COLLECTION_TITLE": "空のコレクション",
@@ -153,6 +156,7 @@
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESTORE": "Restore",
+  "RESTORE_DEFAULTS": "Restore Defaults",
   "RESULTS_FOR_QUERY": "\"QUERY\" の検索結果",
   "RETRIEVING_INFO": "情報を取得中",
   "RETRIEVING_LINK": "ストリームを取得中",
@@ -221,6 +225,7 @@
   "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "トラック",
   "TRANSFERS": "転送",
+  "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "ミュート解除",
   "UPDATE_AVAILABLE": "アップデートが利用可能: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
