--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -81,6 +81,7 @@
   "GENRE": "Gênero",
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
   "HIDE_LYRICS": "Ocultar letras",
+  "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
   "IMPORT_PLAYLIST_FROM_WEB": "Importar do YT Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Insira o URL da playlist",
   "IMPORT_PLAYLIST_TITLE": "Importar Playlist",
@@ -108,6 +109,8 @@
   "NOW_PLAYING_NEXT_TRACK": "PRÓXIMO",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Nada tocando...",
   "NOW_PLAYING_PREVIOUS_TRACK": "ANTERIOR",
+  "NOW_PLAYING_SCREEN": "Now Playing Screen",
+  "NOW_PLAYING_SCREEN_SETTING_SUBTITLE": "Settings related to the \"Now Playing Screen\"",
   "NOW_YOU_ARE_GOOD_TO_GO_BACK": "Agora você está bom para voltar.",
   "NO_COLLECTION_SUBTITLE": "Nenhuma música encontrada.",
   "NO_COLLECTION_TITLE": "Coleção vazia",
@@ -153,6 +156,7 @@
   "RESET_PITCH": "Redefinir tom",
   "RESET_SPEED": "Redefinir velocidade",
   "RESTORE": "Restore",
+  "RESTORE_DEFAULTS": "Restore Defaults",
   "RESULTS_FOR_QUERY": "Resultados para \"QUERY\"",
   "RETRIEVING_INFO": "Recuperação de informação",
   "RETRIEVING_LINK": "Recuperando fluxo",
@@ -221,6 +225,7 @@
   "TRACK_NUMBER": "Número de Faixa",
   "TRACK_SINGLE": "Faixas",
   "TRANSFERS": "Transferências",
+  "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "Desativar Mudo",
   "UPDATE_AVAILABLE": "Atualização disponível: VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use a moderna \"Tela Reproduzindo\" com planos de fundo dinâmicos e letras sincronizadas no tempo",
