--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -81,6 +81,7 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "Se rendre dans les paramètres",
   "HIDE_LYRICS": "Hide lyrics",
+  "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
   "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
@@ -108,6 +109,8 @@
   "NOW_PLAYING_NEXT_TRACK": "Suivant",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Pas de lecture en cours",
   "NOW_PLAYING_PREVIOUS_TRACK": "Précédent",
+  "NOW_PLAYING_SCREEN": "Now Playing Screen",
+  "NOW_PLAYING_SCREEN_SETTING_SUBTITLE": "Settings related to the \"Now Playing Screen\"",
   "NOW_YOU_ARE_GOOD_TO_GO_BACK": "Now you're good to go back.",
   "NO_COLLECTION_SUBTITLE": "Aucune musique trouvée.\nVous pouvez modifier les répertoires où chercher dans les paramètres.",
   "NO_COLLECTION_TITLE": "Collection vide",
@@ -153,6 +156,7 @@
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESTORE": "Restore",
+  "RESTORE_DEFAULTS": "Restore Defaults",
   "RESULTS_FOR_QUERY": "Résultats pour la requête \"QUERY\"",
   "RETRIEVING_INFO": "Récupération d'informations",
   "RETRIEVING_LINK": "Récupération du flux",
@@ -221,6 +225,7 @@
   "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Chanson",
   "TRANSFERS": "Transferts",
+  "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "Réactiver le son",
   "UPDATE_AVAILABLE": "Mise à jour disponible : VERSION",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
