--- a/assets/translations/id_ID.json
+++ b/assets/translations/id_ID.json
@@ -81,6 +81,7 @@
   "GENRE": "Genre",
   "GO_TO_SETTINGS": "KE PENGATURAN",
   "HIDE_LYRICS": "Hide lyrics",
+  "HIGHLIGHTED_LYRICS_SIZE": "Highlighted Lyrics Size",
   "IMPORT_PLAYLIST_FROM_WEB": "Import from YT Music",
   "IMPORT_PLAYLIST_SUBTITLE": "Enter the playlist URL",
   "IMPORT_PLAYLIST_TITLE": "Import Playlist",
@@ -108,6 +109,8 @@
   "NOW_PLAYING_NEXT_TRACK": "SELANJUTNYA",
   "NOW_PLAYING_NOT_PLAYING_TITLE": "Tidak ada yang sedang dimainkan",
   "NOW_PLAYING_PREVIOUS_TRACK": "SEBELUMNYA",
+  "NOW_PLAYING_SCREEN": "Now Playing Screen",
+  "NOW_PLAYING_SCREEN_SETTING_SUBTITLE": "Settings related to the \"Now Playing Screen\"",
   "NOW_YOU_ARE_GOOD_TO_GO_BACK": "Now you're good to go back.",
   "NO_COLLECTION_SUBTITLE": "Tidak ditemukan musik.\nGanti lokasi untuk mencari musik di pengaturan.",
   "NO_COLLECTION_TITLE": "Koleksi kosong",
@@ -153,6 +156,7 @@
   "RESET_PITCH": "Reset pitch",
   "RESET_SPEED": "Reset speed",
   "RESTORE": "Restore",
+  "RESTORE_DEFAULTS": "Restore Defaults",
   "RESULTS_FOR_QUERY": "Hasil dari \"QUERY\"",
   "RETRIEVING_INFO": "Mengambil info",
   "RETRIEVING_LINK": "Mengambil stream",
@@ -221,6 +225,7 @@
   "TRACK_NUMBER": "Track Number",
   "TRACK_SINGLE": "Trek",
   "TRANSFERS": "Transfer",
+  "UNHIGHLIGHTED_LYRICS_SIZE": "Unighlighted Lyrics Size",
   "UNMUTE": "Hidupkan suara",
   "UPDATE_AVAILABLE": "Pembaruan tersedia: VERSI",
   "USE_MODERN_NOW_PLAYING_SCREEN": "Use modern \"Now Playing Screen\" with dynamic backgrounds & time-synced lyrics",
